--- a/src/backend/html_template/index.j2
+++ b/src/backend/html_template/index.j2
@@ -1,56 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    .illustration img {
-      width: 100%;
-      max-width: 100%;
-      max-height: 50%;
-      display: block;
-    }
-    .smallimage img {
-      height: 50px;
-      display: block;
-      background-color: blue;
-    }
-  </style>
-  <title>SWLL Mobile</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
- 	<link rel="stylesheet" href="themes/mobile.min.css" />
-	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
-  <link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" /> 
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> 
-  <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
-
-  
-
-</head>
-<body>
 
 
-	<div data-role="page" data-theme="a">
-    <div data-role="header">
-      <a href="index.html" data-icon="delete">Cancel</a>
-      <h1>Edit Contact</h1>
-      <a href="index.html" data-icon="check">Save</a>
-    </div>
+{% include "header.j2" %}
 
 {% for n in swll_data %}
 
-<div data-role="collapsible-set">
-  <div data-role="collapsible" data-fullscreen="true" {{ "data-collapsed=false" if n.get_active() }}>
-    <h3 class="smallimage">Validità: {{n.get_validity()}} <img src="{{n.get_url_image_uuid()}}"></h3>
-    <div class="illustration">
-    <img src="{{n.get_url_image_uuid()}}" referrerpolicy="origin">
-   </div>
-    </div>
+
+  <div class="swll" {{ "swllactive=true" if n.get_active() }}>
+    {% if n.get_active() %}
+     <h1><span>CARTA ATTUALMENTE VALIDA</span></h1>
+    {% endif %}
+    <h3 class="swll-title">{{n.get_validity()}}</h3>
+
+     <div class="illustration">
+       <img src="am_charts/{{n.get_url_image_id()}}" referrerpolicy="origin">
+     </div>
   </div>
 
+
 {% endfor %}
-    
-	</div>
-</body>
-</html>
 
 
+{% include "footer.j2" %}
