--- a/src/backend/html_template/header.j2
+++ b/src/backend/html_template/header.j2
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link rel="manifest" href="manifest.json">
+
+  <script>
+  if (navigator.serviceWorker) {
+  navigator.serviceWorker.register('/sw.js').then(function(registration) {
+    console.log('ServiceWorker registration successful with scope:',  registration.scope);
+  }).catch(function(error) {
+    console.log('ServiceWorker registration failed:', error);
+  });
+}
+
+  </script>
+
   <style>
     
     html {
